--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -213,27 +213,27 @@
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Search Trending</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Web Design</a></li>
-              <li><a href="#">Graphic Design</a></li>
-              <li><a href="#">Web Developers</a></li>
-              <li><a href="#">Python</a></li>
-              <li><a href="#">HTML5</a></li>
-              <li><a href="#">CSS3</a></li>
+              <li><a href="#">Hand Sanitizer</a></li>
+              <li><a href="#">Masks</a></li>
+              <li><a href="#">Canned Goods</a></li>
+              <li><a href="#">Bread</a></li>
+              <li><a href="#">Printers</a></li>
+              <li><a href="#">Clorox Wipes</a></li>
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Company</h3>
             <ul class="list-unstyled">
               <li><a href="#">About Us</a></li>
-              <li><a href="#">Career</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Resources</a></li>
+              <li><a href="#">How We Got Started</a></li>
+              <li><a href="#">Our Future</a></li>
+              <li><a href="#">Annual Impact Report</a></li>
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Support</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Support</a></li>
+              <li><a href="#">Tech Support</a></li>
               <li><a href="#">Privacy</a></li>
               <li><a href="#">Terms of Service</a></li>
             </ul>
@@ -241,10 +241,10 @@
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Contact Us</h3>
             <div class="footer-social">
-              <a href="#"><span class="icon-facebook"></span></a>
-              <a href="#"><span class="icon-twitter"></span></a>
-              <a href="#"><span class="icon-instagram"></span></a>
-              <a href="#"><span class="icon-linkedin"></span></a>
+              <!-- <a href="#"><span class="icon-facebook"></span></a> -->
+              <a href="https://twitter.com/NyahMacklinDev"><span class="icon-twitter"></span></a>
+              <!-- <a href="#"><span class="icon-instagram"></span></a> -->
+              <a href="https://www.linkedin.com/in/nyahmacklin/"><span class="icon-linkedin"></span></a>
             </div>
           </div>
         </div>
@@ -252,13 +252,15 @@
         <div class="row text-center">
           <div class="col-12">
             <p class="copyright"><small>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></small></p>
+
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | COMMUNAL is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >MacklinEngineering</a>
+          </small></p>
           </div>
         </div>
       </div>
     </footer>
+
+
 
   </div>
 
