--- a/views/post-job.ejs
+++ b/views/post-job.ejs
@@ -148,7 +148,7 @@
               </div>
               <div class="form-group">
                 <label for="Item-title">Item Title</label>
-                <input type="text" class="form-control" id="job-title" placeholder="Batteries">
+                <input type="text" class="form-control" id="job-title" placeholder="Masks">
               </div>
               <div class="form-group">
                 <label for="job-location">Location</label>
