--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-  <title>21 Savage Fan Site</title>
+  <!-- <title>Communal App</title>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"> -->
 
 
   <title>Communal &mdash; Website Template by MacklinEngineering</title>
@@ -31,7 +31,7 @@
 <body>
 
 
-    <div class="page-header text-center">Page title
+    <!-- <div class="page-header text-center">Page title
       <h1><span class="fa fa-anchor"></span> Profile Page</h1>
       <a href="/logout" class="btn btn-default btn-sm">Logout</a>
 
@@ -87,7 +87,7 @@
       </div>
       <% } %>
 
-    </div>
+    </div> -->
 
     <div id="overlayer"></div>
     <div class="loader">
@@ -106,47 +106,48 @@
           </div>
         </div>
         <div class="site-mobile-menu-body"></div>
-      </div> <!-- .site-mobile-menu -->
+      </div> 
+      <!-- .site-mobile-menu -->
 
 
       <!-- NAVBAR -->
       <header class="site-navbar mt-3">
         <div class="container-fluid">
           <div class="row align-items-center">
-            <div class="site-logo col-6"><a href="index.ejs">Communal</a></div>
+            <div class="site-logo col-6"><a href="/about">Communal</a></div>
 
             <nav class="mx-auto site-navigation">
               <ul class="site-menu js-clone-nav d-none d-xl-block ml-0 pl-0">
-                <li><a href="index.ejs" class="nav-link active">Home</a></li>
-                <li><a href="about.ejs">About</a></li>
+                <li><a href="/index" class="nav-link active">Home</a></li>
+                <li><a href="/about">About</a></li>
                 <li class="has-children">
-                  <a href="job-listings.ejs" class="active">Item Listings</a>
+                  <a href="/job-listings" class="active">Item Listings</a>
                   <ul class="dropdown">
-                    <li><a href="Item-single.ejs">Item Single</a></li>
-                    <li><a href="post-Job.ejs" class="active">Post a Item</a></li>
+                    <li><a href="/item-single">Item Single</a></li>
+                    <li><a href="/post-job" class="active">Post a Item</a></li>
                   </ul>
                 </li>
                 <li class="has-children">
-                  <a href="services.ejs">Pages</a>
+                  <a href="/services">Pages</a>
                   <ul class="dropdown">
-                    <li><a href="services.ejs">Services</a></li>
+                    <li><a href="/services">Services</a></li>
 
-                    <li><a href="testimonials.ejs">Testimonials</a></li>
-                    <li><a href="faq.ejs">Frequently Ask Questions</a></li>
-                    <li><a href="gallery.ejs">Gallery</a></li>
+                    <li><a href="/testimonials">Testimonials</a></li>
+                    <li><a href="/faq">Frequently Ask Questions</a></li>
+                    <li><a href="/gallery">Gallery</a></li>
                   </ul>
                 </li>
 
                 <li><a href="contact.ejs">Contact</a></li>
-                <li class="d-lg-none"><a href="post-job.ejs"><span class="mr-2">+</span> Post a Item</a></li>
-                <li class="d-lg-none"><a href="login.ejs">Log In</a></li>
+                <li class="d-lg-none"><a href="/post-job"><span class="mr-2">+</span> Post a Item</a></li>
+                <li class="d-lg-none"><a href="/login">Log In</a></li>
               </ul>
             </nav>
 
             <div class="right-cta-menu text-right d-flex aligin-items-center col-6">
               <div class="ml-auto">
-                <a href="post-job.ejs" class="btn btn-outline-white border-width-2 d-none d-lg-inline-block"><span class="mr-2 icon-add"></span>Post a Item</a>
-                <a href="login.ejs" class="btn btn-primary border-width-2 d-none d-lg-inline-block"><span class="mr-2 icon-lock_outline"></span>Log In</a>
+                <a href="/post-job" class="btn btn-outline-white border-width-2 d-none d-lg-inline-block"><span class="mr-2 icon-add"></span>Post a Item</a>
+                <a href="/login" class="btn btn-primary border-width-2 d-none d-lg-inline-block"><span class="mr-2 icon-lock_outline"></span>Log In</a>
               </div>
               <a href="#" class="site-menu-toggle js-menu-toggle d-inline-block d-xl-none mt-lg-2 ml-3"><span class="icon-menu h3 m-0 p-0 mt-2"></span></a>
             </div>
@@ -156,13 +157,13 @@
       </header>
 
 
-      <section class="home-section section-hero overlay bg-image" style="background-image: url('images/hero_1.jpg');" id="home-section">
+      <section class="home-section section-hero overlay bg-image" style="background-image: url('https://images.pexels.com/photos/325521/pexels-photo-325521.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');" id="home-section">
 
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-md-12">
               <div class="mb-5 text-center">
-                <h1 class="text-white font-weight-bold">The Easiest Way To Find Free Stuff In Your Community</h1>
+                <h1 class="text-white font-weight-bold">The #1 App In The Country For Resource Sharing</h1>
                 <p>Search through hundres of pages of free food, free furniture, anything you'll ever need to survive in a big city.</p>
               </div>
               <form method="post" class="search-jobs-form">
@@ -190,7 +191,8 @@
                     </select>
                   </div>
                   <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4 mb-lg-0">
-                    <button type="submit" class="btn btn-primary btn-lg btn-block text-white btn-search"><span class="icon-search icon mr-2"></span>Search Items</button>
+                    <!-- <button type="submit" class="btn btn-primary btn-lg btn-block text-white btn-search"><span class="icon-search icon mr-2"></span>Search Items</button> -->
+                    <a href="/job-listings" class="btn btn-primary btn-lg btn-block text-white btn-search"><span class="icon-search icon mr-2"></span>Search Items</a>
                   </div>
                 </div>
                 <div class="row">
@@ -214,7 +216,7 @@
 
       </section>
 
-      <section class="py-5 bg-image overlay-primary fixed overlay" id="next" style="background-image: url('images/hero_1.jpg');">
+      <section class="py-5 bg-image overlay-primary fixed overlay" id="next" style="background-image: url('https://images.pexels.com/photos/325521/pexels-photo-325521.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');">
         <div class="container">
           <div class="row mb-5 justify-content-center">
             <div class="col-md-7 text-center">
@@ -434,7 +436,7 @@
         </div>
       </section>
 
-      <section class="py-5 bg-image overlay-primary fixed overlay" style="background-image: url('images/hero_1.jpg');">
+      <!-- <section class="py-5 bg-image overlay-primary fixed overlay" style="background-image: url('images/hero_1.jpg');">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-8">
@@ -446,7 +448,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
 
       <section class="site-section py-4">
@@ -529,12 +531,12 @@
 
       </section>
 
-      <section class="pt-5 bg-image overlay-primary fixed overlay" style="background-image: url('images/hero_1.jpg');">
+      <section class="pt-5 bg-image overlay-primary fixed overlay" style="background-image: url('https://images.pexels.com/photos/325521/pexels-photo-325521.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');">
         <div class="container">
           <div class="row">
             <div class="col-md-6 align-self-center text-center text-md-left mb-5 mb-md-0">
-              <h2 class="text-white">Get The Mobile App</h2>
-              <p class="mb-5 lead text-white">Collum is best suited for mobile!</p>
+              <h2 class="text-white">Communal is built for IOS and Android</h2>
+              <!-- <p class="mb-5 lead text-white">Communal is best suited for mobile!</p> -->
               <p class="mb-0">
                 <a href="#" class="btn btn-dark btn-md px-4 border-width-2"><span class="icon-apple mr-3"></span>App Store</a>
                 <a href="#" class="btn btn-dark btn-md px-4 border-width-2"><span class="icon-android mr-3"></span>Play Store</a>
@@ -569,18 +571,18 @@
             <div class="col-6 col-md-3 mb-4 mb-md-0">
               <h3>Company</h3>
               <ul class="list-unstyled">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">How We Got Started</a></li>
+                <li><a href="/about">About Us</a></li>
+                <!-- <li><a href="#">How We Got Started</a></li>
                 <li><a href="#">Our Future</a></li>
-                <li><a href="#">Annual Impact Report</a></li>
+                <li><a href="#">Annual Impact Report</a></li> -->
               </ul>
             </div>
             <div class="col-6 col-md-3 mb-4 mb-md-0">
               <h3>Support</h3>
               <ul class="list-unstyled">
-                <li><a href="#">Tech Support</a></li>
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">Terms of Service</a></li>
+                <li><a href="/contact">Tech Support</a></li>
+                <!-- <li><a href="#">Privacy</a></li> -->
+                <!-- <li><a href="#">Terms of Service</a></li> -->
               </ul>
             </div>
             <div class="col-6 col-md-3 mb-4 mb-md-0">
