--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,16 @@
 <!-- When the /login page awhich authenticates the user information to what's stored inside the database -->
 
 <!doctype html>
-<html>
+<html >
 <head>
+
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body id="bodyLoginPage">
+<div class="container">
+<div class="col-sm-6 col-sm-offset-3">
 
 
     <h1><span class="fa fa-sign-in"></span> Login</h1>
