--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="bodySignupPage">
 <div class="container">
 <div class="col-sm-6 col-sm-offset-3">
 
