--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -138,7 +138,7 @@
                   </ul>
                 </li>
 
-                <li><a href="contact.ejs">Contact</a></li>
+                <li><a href="contact">Contact</a></li>
                 <li class="d-lg-none"><a href="/post-job"><span class="mr-2">+</span> Post a Item</a></li>
                 <li class="d-lg-none"><a href="/login">Log In</a></li>
               </ul>
@@ -272,7 +272,7 @@
 
           <ul class="job-listings mb-5">
             <li class="job-listing d-block d-sm-flex pb-3 pb-sm-0 align-items-center">
-              <a href="job-single.ejs"></a>
+              <a href="job-single"></a>
               <div class="job-listing-logo">
                 <img src="images/diapers.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid">
               </div>
@@ -292,7 +292,7 @@
 
             </li>
             <li class="job-listing d-block d-sm-flex pb-3 pb-sm-0 align-items-center">
-              <a href="job-single.ejs"></a>
+              <a href="job-single"></a>
               <div class="job-listing-logo">
                 <img src="images/csashare.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid">
               </div>
@@ -312,7 +312,7 @@
             </li>
 
             <li class="job-listing d-block d-sm-flex pb-3 pb-sm-0 align-items-center">
-              <a href="job-single.ejs"></a>
+              <a href="job-single"></a>
               <div class="job-listing-logo">
                 <img src="images/handsani.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid">
               </div>
@@ -332,7 +332,7 @@
             </li>
 
             <li class="job-listing d-block d-sm-flex pb-3 pb-sm-0 align-items-center">
-              <a href="job-single.ejs"></a>
+              <a href="job-single"></a>
               <div class="job-listing-logo">
                 <img src="images/macbook.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid">
               </div>
@@ -352,7 +352,7 @@
             </li>
 
             <li class="job-listing d-block d-sm-flex pb-3 pb-sm-0 align-items-center">
-              <a href="job-single.ejs"></a>
+              <a href="job-single"></a>
               <div class="job-listing-logo">
                 <img src="images/oranges.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid">
               </div>
@@ -371,7 +371,7 @@
               </div>
             </li>
             <li class="job-listing d-block d-sm-flex pb-3 pb-sm-0 align-items-center">
-              <a href="job-single.ejs"></a>
+              <a href="job-single"></a>
               <div class="job-listing-logo">
                 <img src="images/vegancake.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid">
               </div>
@@ -391,7 +391,7 @@
 
             </li>
             <li class="job-listing d-block d-sm-flex pb-3 pb-sm-0 align-items-center">
-              <a href="job-single.ejs"></a>
+              <a href="job-single"></a>
               <div class="job-listing-logo">
                 <img src="images/bedroomset.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid">
               </div>
@@ -538,8 +538,8 @@
               <h2 class="text-white">Communal is built for IOS and Android</h2>
               <!-- <p class="mb-5 lead text-white">Communal is best suited for mobile!</p> -->
               <p class="mb-0">
-                <a href="#" class="btn btn-dark btn-md px-4 border-width-2"><span class="icon-apple mr-3"></span>App Store</a>
-                <a href="#" class="btn btn-dark btn-md px-4 border-width-2"><span class="icon-android mr-3"></span>Play Store</a>
+                <a href="https://www.apple.com/ios/app-store/" class="btn btn-dark btn-md px-4 border-width-2"><span class="icon-apple mr-3"></span>App Store</a>
+                <a href="https://play.google.com/store" class="btn btn-dark btn-md px-4 border-width-2"><span class="icon-android mr-3"></span>Play Store</a>
               </p>
             </div>
             <div class="col-md-6 ml-auto align-self-end">
