--- a/views/services.ejs
+++ b/views/services.ejs
@@ -192,18 +192,18 @@
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Company</h3>
             <ul class="list-unstyled">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">How We Got Started</a></li>
+              <li><a href="/about">About Us</a></li>
+              <!-- <li><a href="#">How We Got Started</a></li>
               <li><a href="#">Our Future</a></li>
-              <li><a href="#">Annual Impact Report</a></li>
+              <li><a href="#">Annual Impact Report</a></li> -->
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Support</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Tech Support</a></li>
-              <li><a href="#">Privacy</a></li>
-              <li><a href="#">Terms of Service</a></li>
+              <li><a href="/contact">Tech Support</a></li>
+              <!-- <li><a href="#">Privacy</a></li> -->
+              <!-- <li><a href="#">Terms of Service</a></li> -->
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-4 mb-md-0">
