linked pages and bug fixes

--- a/views/job-single.ejs
+++ b/views/job-single.ejs
@@ -44,7 +44,7 @@
     <header class="site-navbar mt-3">
       <div class="container-fluid">
         <div class="row align-items-center">
-          <div class="site-logo col-6"><a href="index.html">Communal</a></div>
+          <div class="site-logo col-6"><a href="/about">Communal</a></div>
 
           <nav class="mx-auto site-navigation">
             <ul class="site-menu js-clone-nav d-none d-xl-block ml-0 pl-0">
@@ -458,12 +458,12 @@
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Search Trending</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Hand Sanitizer</a></li>
-              <li><a href="#">Masks</a></li>
-              <li><a href="#">Canned Goods</a></li>
-              <li><a href="#">Bread</a></li>
-              <li><a href="#">Printers</a></li>
-              <li><a href="#">Clorox Wipes</a></li>
+              <li><a href="/job-single">Hand Sanitizer</a></li>
+              <li><a href="/job-single">Masks</a></li>
+              <li><a href="/job-single">Canned Goods</a></li>
+              <li><a href="/job-single">Bread</a></li>
+              <li><a href="/job-single">Printers</a></li>
+              <li><a href="/job-single">Clorox Wipes</a></li>
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-4 mb-md-0">
