--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -199,9 +199,9 @@
                   <div class="col-md-12 popular-keywords">
                     <h3>Trending Keywords:</h3>
                     <ul class="keywords list-unstyled m-0 p-0">
-                      <li><a href="#" class="">Masks</a></li>
-                      <li><a href="#" class="">Medical Supplies</a></li>
-                      <li><a href="#" class="">Diapers</a></li>
+                      <li><a href="/job-single" class="">Masks</a></li>
+                      <li><a href="/job-single" class="">Medical Supplies</a></li>
+                      <li><a href="/job-single" class="">Diapers</a></li>
                     </ul>
                   </div>
                 </div>
