--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -45,42 +45,42 @@
     <header class="site-navbar mt-3">
       <div class="container-fluid">
         <div class="row align-items-center">
-          <div class="site-logo col-6"><a href="index.html">Communal</a></div>
+          <div class="site-logo col-6"><a href="/about">Communal</a></div>
 
           <nav class="mx-auto site-navigation">
             <ul class="site-menu js-clone-nav d-none d-xl-block ml-0 pl-0">
-              <li><a href="index.html" class="nav-link active">Home</a></li>
-              <li><a href="about.html">About</a></li>
+              <li><a href="/index" class="nav-link active">Home</a></li>
+              <li><a href="/about">About</a></li>
               <li class="has-children">
-                <a href="job-listings.html" class="active">Item Listings</a>
+                <a href="/job-listings" class="active">Item Listings</a>
                 <ul class="dropdown">
-                  <li><a href="Item-single.html">Item Single</a></li>
-                  <li><a href="post-Job.html" class="active">Post a Item</a></li>
+                  <li><a href="/item-single">Item Single</a></li>
+                  <li><a href="/post-Job" class="active">Post an Item</a></li>
                 </ul>
               </li>
               <li class="has-children">
-                <a href="services.html">Pages</a>
+                <a href="/services">Pages</a>
                 <ul class="dropdown">
-                  <li><a href="services.html">Services</a></li>
+                  <li><a href="/services">Services</a></li>
                   <!-- <li><a href="service-single.html">Service Single</a></li> -->
                   <!-- <li><a href="blog-single.html">Blog Single</a></li> -->
                   <!-- <li><a href="portfolio.html">Portfolio</a></li>
                   <li><a href="portfolio-single.html">Portfolio Single</a></li> -->
-                  <li><a href="testimonials.html">Testimonials</a></li>
-                  <li><a href="faq.html">Frequently Ask Questions</a></li>
-                  <li><a href="gallery.html">Gallery</a></li>
+                  <li><a href="/testimonials">Testimonials</a></li>
+                  <li><a href="/faq">Frequently Ask Questions</a></li>
+                  <li><a href="/gallery">Gallery</a></li>
                 </ul>
               </li>
               <!-- <li><a href="blog.html">Blog</a></li> -->
-              <li><a href="contact.html">Contact</a></li>
-              <li class="d-lg-none"><a href="post-job.html"><span class="mr-2">+</span> Post a Item</a></li>
-              <li class="d-lg-none"><a href="login.html">Log In</a></li>
+              <li><a href="/contact">Contact</a></li>
+              <li class="d-lg-none"><a href="/post-job"><span class="mr-2">+</span> Post an Item</a></li>
+              <li class="d-lg-none"><a href="/login">Log In</a></li>
             </ul>
           </nav>
 
           <div class="right-cta-menu text-right d-flex aligin-items-center col-6">
             <div class="ml-auto">
-              <a href="post-job.html" class="btn btn-outline-white border-width-2 d-none d-lg-inline-block"><span class="mr-2 icon-add"></span>Post a Item</a>
+              <a href="post-job.html" class="btn btn-outline-white border-width-2 d-none d-lg-inline-block"><span class="mr-2 icon-add"></span>Post an Item</a>
               <a href="login.html" class="btn btn-primary border-width-2 d-none d-lg-inline-block"><span class="mr-2 icon-lock_outline"></span>Log In</a>
             </div>
             <a href="#" class="site-menu-toggle js-menu-toggle d-inline-block d-xl-none mt-lg-2 ml-3"><span class="icon-menu h3 m-0 p-0 mt-2"></span></a>
@@ -141,13 +141,13 @@
               <div class="row form-group">
                 <div class="col-md-12">
                   <label class="text-black" for="message">Message</label>
-                  <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Write your notes or questions here..."></textarea>
+                  <textarea name="message" id="message" cols="30" rows="7" class="form-control"></textarea>
                 </div>
               </div>
 
               <div class="row form-group">
                 <div class="col-md-12">
-                  <input type="submit" value="Send Message" class="btn btn-primary btn-md text-white">
+                  <input type="submit" value="Send Message" class="btn btn-primary btn-md text-white" id="contactFormSubmitButton">
                 </div>
               </div>
 
@@ -225,29 +225,29 @@
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Search Trending</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Hand Sanitizer</a></li>
-              <li><a href="#">Masks</a></li>
-              <li><a href="#">Canned Goods</a></li>
-              <li><a href="#">Bread</a></li>
-              <li><a href="#">Printers</a></li>
-              <li><a href="#">Clorox Wipes</a></li>
+              <li><a href="/job-single">Hand Sanitizer</a></li>
+              <li><a href="/job-single">Masks</a></li>
+              <li><a href="/job-single">Canned Goods</a></li>
+              <li><a href="/job-single">Bread</a></li>
+              <li><a href="/job-single">Printers</a></li>
+              <li><a href="/job-single">Clorox Wipes</a></li>
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Company</h3>
             <ul class="list-unstyled">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">How We Got Started</a></li>
+              <li><a href="/about">About Us</a></li>
+              <!-- <li><a href="#">How We Got Started</a></li>
               <li><a href="#">Our Future</a></li>
-              <li><a href="#">Annual Impact Report</a></li>
+              <li><a href="#">Annual Impact Report</a></li> -->
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Support</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Tech Support</a></li>
-              <li><a href="#">Privacy</a></li>
-              <li><a href="#">Terms of Service</a></li>
+              <li><a href="/contact">Tech Support</a></li>
+              <!-- <li><a href="#">Privacy</a></li> -->
+              <!-- <li><a href="#">Terms of Service</a></li> -->
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-4 mb-md-0">
